fix z-index on home button

--- a/src/App.css
+++ b/src/App.css
@@ -6,6 +6,8 @@
 
 .App header {
   text-align: right;
+  position: relative;
+  z-index: 99;
 }
 
 .App .link {
